@@ -29,6 +29,8 @@
 * Fixed not working Connect to Server... dialog when non-anonymous user
     is selected.
 
+* Fixed possible memory corruption in the Connect to Server... dialog.
+
 
 Changes on 1.2.3 since 1.2.2:
 
